<resources>
    <string name="app_name">DIT341 Template</string>
    <string name="btn_new_activity">New Activity</string>
    <string name="btn_get_http">Get Camels</string>
    <string name="edit_ingredient_text">Edit ingredient</string>
    <string name="selected_recipe">Selected Recipe</string>
    <string name="delete">DELETE</string>
    <string name="patch">PATCH</string>
    <string name="put">PUT</string>
    <string name="recipe_info">Recipe info</string>


    <string name="recipe_name">recipe name</string>
    <string name="update_patch">UPDATE (PATCH)</string>
    <string name="nutritional_info">nutritional info</string>
    <string name="description">description</string>


    <string name="edit_recipe">EDIT RECIPE</string>
    <string name="create">CREATE</string>
    <string name="enter_recipe_name">enter recipe name</string>


    <string name="new_recipe">New recipe</string>


    <string name="update_put">UPDATE (PUT)</string>


    <string name="delete_all">DELETE ALL</string>
    <string name="create_new_recipe">CREATE NEW RECIPE</string>
    <string name="list_of_recipes">List of Recipes</string>
    <string name="textview">TextView</string>
    <string name="select">SELECT</string>
    <string name="enter_position">enter position</string>
    <string name="edit_user">Edit User</string>
    <string name="selected_user">Selected User</string>



    <string name="user_info">User info</string>

    <string name="user_name">user name</string>

    <string name="password">password</string>
    <string name="enter_user_name">enter user name</string>



    <string name="create_new_user">CREATE NEW USER</string>
    <string name="list_of_users">List of Users</string>



</resources>
